--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </a>
           </li>
           <li class="contacts-type">
-            <span 
+            <span
               ><svg
                 width="800px"
                 height="800px"
@@ -163,6 +163,7 @@
                 <a
                   href="https://genius.space/crt-verify/?verify=e81d6ae9-a4d6-44ec-ba04-f1851222abe1"
                   class="exp"
+                  target="_blank"
                   >FullStack Developer | Genius.space</a
                 >
               </li>
@@ -181,7 +182,6 @@
             <span class="skill">OOP</span>
             <span class="skill">Express.js</span>
           </div>
-
 
           <!-- Soft skills -->
           <h3 class="title">Soft Skills</h3>
