--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@
         <h1>Kateryna Liashkova</h1>
         <h2 class="specialty">Front-End Developer</h2>
         <p class="summary-description">
-          Front-end developer with hands-on experience in JavaScript (ES6+),
-          React.js, and Node.js. Passionate about building responsive,
-          user-focused applications. Quick learner with strong problem-solving
-          skills.
+          Junior Front-end developer with basic knowledge of HTML, CSS and
+          JavaScript (ES6+). Familiar with the basics of React.js. Looking for a
+          first position as an HTML/CSS layout designer or junior JavaScript
+          developer, where I can consolidate theoretical knowledge in practice
+          and develop towards full-fledged web development. I have several
+          educational projects in my portfolio and am highly motivated for
+          professional growth.
         </p>
       </header>
       <!-- Contacts section -->
       <section class="contacts">
-        <!-- <h3 class="contacts-title">Contacts</h3> -->
-        <ul>
+        <div class="contacts-columns">
+       
+          <div class="contacts-column contacts-left">
+            <ul class="contacts-item">
           <li class="contacts-type">
             <span>
               <svg
@@ -41,7 +46,7 @@
                 />
               </svg>
             </span>
-            <a href="+380683082238" class="contacts-link">
+            <a href="tel:+380683082238" class="contacts-link">
               +380 68 308 22 38
             </a>
           </li>
@@ -61,7 +66,7 @@
               </svg>
             </span>
             <a
-              href="kateryna.liashkova@gmail.com"
+              href="mailto:kateryna.liashkova@gmail.com"
               class="contacts-link"
               target="_blank"
             >
@@ -93,6 +98,10 @@
               @teawithmee</a
             >
           </li>
+          </ul>
+</div>
+<div class="contacts-column contacts-right">
+  <ul class="contacts-item">
           <li class="contacts-type">
             <span>
               <svg
@@ -133,8 +142,51 @@
               kateryna-liashkova</a
             >
           </li>
-        </ul>
+          <li class="contacts-type">
+            <span>
+              <svg
+                width="800px"
+                height="800px"
+                viewBox="0 0 20 20"
+                version="1.1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <g
+                  id="Page-1"
+                  stroke="none"
+                  stroke-width="1"
+                  fill="none"
+                  fill-rule="evenodd"
+                >
+                  <g
+                    id="Dribbble-Light-Preview"
+                    transform="translate(-140.000000, -7559.000000)"
+                    fill="#000000"
+                  >
+                    <g id="icons" transform="translate(56.000000, 160.000000)">
+                      <path
+                        d="M94,7399 C99.523,7399 104,7403.59 104,7409.253 C104,7413.782 101.138,7417.624 97.167,7418.981 C96.66,7419.082 96.48,7418.762 96.48,7418.489 C96.48,7418.151 96.492,7417.047 96.492,7415.675 C96.492,7414.719 96.172,7414.095 95.813,7413.777 C98.04,7413.523 100.38,7412.656 100.38,7408.718 C100.38,7407.598 99.992,7406.684 99.35,7405.966 C99.454,7405.707 99.797,7404.664 99.252,7403.252 C99.252,7403.252 98.414,7402.977 96.505,7404.303 C95.706,7404.076 94.85,7403.962 94,7403.958 C93.15,7403.962 92.295,7404.076 91.497,7404.303 C89.586,7402.977 88.746,7403.252 88.746,7403.252 C88.203,7404.664 88.546,7405.707 88.649,7405.966 C88.01,7406.684 87.619,7407.598 87.619,7408.718 C87.619,7412.646 89.954,7413.526 92.175,7413.785 C91.889,7414.041 91.63,7414.493 91.54,7415.156 C90.97,7415.418 89.522,7415.871 88.63,7414.304 C88.63,7414.304 88.101,7413.319 87.097,7413.247 C87.097,7413.247 86.122,7413.234 87.029,7413.87 C87.029,7413.87 87.684,7414.185 88.139,7415.37 C88.139,7415.37 88.726,7417.2 91.508,7416.58 C91.513,7417.437 91.522,7418.245 91.522,7418.489 C91.522,7418.76 91.338,7419.077 90.839,7418.982 C86.865,7417.627 84,7413.783 84,7409.253 C84,7403.59 88.478,7399 94,7399"
+                        id="github-[#142]"
+                      ></path>
+                    </g>
+                  </g>
+                </g>
+              </svg>
+            </span>
+            <a
+              href="https://github.com/Catrisx"
+              class="contacts-link"
+              target="_blank"
+            >
+              Catrisx</a
+            >
+          </li>
+          </ul>
+          </div>
+        </div>
       </section>
+      
       <section class="about">
         <!--Education-->
         <div class="education">
@@ -156,7 +208,7 @@
           <!--Company1-->
           <div>
             <p class="period">
-              November 2023 - Novemder 2024 <span class="line"></span>
+              November 2023 - November 2024 <span class="line"></span>
             </p>
             <ul class="courses-list">
               <li class="courses-list-item">
@@ -172,13 +224,13 @@
           <!-- Tech Skils -->
           <h3 class="title">Tech Skills</h3>
           <div class="skills">
-            <span class="skill">JavaScript</span>
-            <span class="skill">React</span>
-            <span class="skill">Node.js</span>
             <span class="skill">HTML5</span>
             <span class="skill">CSS3</span>
-            <span class="skill">REST API</span>
+            <span class="skill">JavaScript</span>
+            <span class="skill">React</span>
             <span class="skill">Git</span>
+            <span class="skill">Node.js</span>
+            <span class="skill">REST API</span>
             <span class="skill">OOP</span>
             <span class="skill">Express.js</span>
           </div>
@@ -197,34 +249,57 @@
           <section class="about-me">
             <h3 class="title">About me</h3>
             <p class="about-description">
-              I am able to work on a task for a long time, until I solve it
-              without stopping at difficulties I learn quickly and learn easily
-              new information that allows me to adapt to the new conditions and
-              effectively perform the assigned tasks task. I have an analytical
-              approach to solving problems and always strive for
-              self-improvement. I always take responsibility for my work trying
-              to achieve the best results.
+              As a beginner in development, I demonstrate high persistence in
+              solving new problems. During my studies, I regularly worked with
+              documentation and Stack Overflow resources to overcome technical
+              challenges. I am willing to spend extra time learning new
+              libraries and approaches. I am looking for a team where I can grow
+              under the mentorship of experienced developers.
             </p>
           </section>
           <!-- my projects -->
           <h3 class="title">Portfolio</h3>
-          <ul class="courses-list">
-            <li class="courses-list-item">
-              <a
-                href="https://catrisx.github.io/bakery/"
-                class="exp"
-                target="_blank"
-              >
-                Modern bakery website</a
-              >
+          <ul class="portfolio-list">
+            <li class="portfolio-list-item">
+              <p class="portfolio-description">
+                <span class="portfolio-heading"
+                  >Modern bakery website | HTML, CSS, JavaScript</span
+                >
+                <br />
+                - Developed a responsive interface using CSS Grid and Flexbox
+                <br />
+                - Implemented a customer feedback carousel in pure JavaScript
+                <br />
+                - Added an interactive order form with field validation <br />
+                Github:
+                <a
+                  href="https://catrisx.github.io/bakery/"
+                  class="exp"
+                  target="_blank"
+                  >Modern bakery website</a
+                >
+              </p>
             </li>
-            <li class="courses-list-item">
-              <a
-                href="https://catrisx.github.io/Kropp-Fitness/"
-                class="exp"
-                target="_blank"
-                >Kropp Fitness website</a
-              >
+            <li class="portfolio-list-item">
+              <p class="portfolio-description">
+                <span class="portfolio-heading"
+                  >Kropp Fitness website | HTML, CSS</span
+                >
+                <br />
+                - Converted Figma design into a pixel-perfect responsive website
+                <br />
+                - Created adaptive layout using CSS Flexbox and media queries
+                <br />
+                - Implemented clean, maintainable code structure following BEM
+                methodology <br />
+                Github:
+                <a
+                  href="https://catrisx.github.io/Kropp-Fitness/"
+                  class="exp"
+                  target="_blank"
+                  >Kropp Fitness website</a
+                >
+              </p>
             </li>
           </ul>
         </div>
